Use virtual threads for blocking process IO